[package]
name = "examples"
version = "0.1.0"
authors = ["Roman Gafiyatullin <r.gafiyatullin@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
async-trait = "^0.1"
futures = "^0.3"
thiserror = "^1"
anyhow = "^1"
serde = { version = "^1", features = ["derive"] }
tokio = { version = "^1", features = ["full"] }
bytes = "^1"
derive_more = "0.99"
pretty_env_logger = "^0.4"
lapin = "2"
