[package]
name = "coney-amqp-0-9-1"
version = "0.1.0"
authors = ["Roman Gafiyatullin <r.gafiyatullin@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
thiserror = "^1"
futures = "^0.3"
tokio = { version = "^1", features = ["net"] }
tokio-util = { version = "^0.6", features = ["codec"] }
async-trait = "^0.1"
bytes = "^1"
amq-protocol = "^6.0"
amq-protocol-types = "^6.0"
nom = { version = "^6.0", features = ["std"] }

common = { package = "coney-common", path = "../../libs/coney-common", version = "^0.1" }
authc = { package = "coney-authc", path = "../../libs/coney-authc", version = "^0.1" }