[package]
name = "coney-authc-plain-const-creds"
version = "0.1.0"
authors = ["Roman Gafiyatullin <r.gafiyatullin@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
async-trait = "^0.1"
futures = "^0.3"
thiserror = "^1"
anyhow = "^1"

authc = { package = "coney-authc", version = "^0.1", path = "../../libs/coney-authc" }
