[package]
name = "coney-mq-server"
version = "0.1.0"
authors = ["Roman Gafiyatullin <r.gafiyatullin@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
dotenv = "^0.15"
pretty_env_logger = "^0.4"
futures = "^0.3"
tokio = {version = "^1", features = ["full"]}
eyre = "^0.6"

common = { package = "coney-common", path = "../../libs/coney-common", version = "^0.1" }
mq = { package = "coney-mq", path = "../../libs/coney-mq", version = "^0.1" }
authc = { package = "coney-authc", path = "../../libs/coney-authc", version = "^0.1" }
authc-plain-const-creds = { package = "coney-authc-plain-const-creds", path = "../../libs/coney-authc-plain-const-creds", version = "^0.1" }
amqp-0-9-1 = { package = "coney-amqp-0-9-1", path = "../../libs/coney-amqp-0-9-1", version = "^0.1" }